--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: concepts blog
 description:
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://www.millionconcepts.com/wp-content/uploads/2013/12/million-concepts-text-300x70.jpeg
+avatar:
 
 #
 # Flags below are optional
