--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: concepts blog
+name: Concepts
 
 # Short bio or description (displayed in the header)
 description:
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: cmillion
+  github:
   instagram:
   linkedin:
   pinterest:
@@ -37,7 +37,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://millionconcepts.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -49,8 +49,8 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-markdown: redcarpet
-highlighter: pygments
+#markdown: redcarpet
+highlighter: rouge
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
