--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Concepts
 description:
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar:
+avatar: https://millionconcepts.com/ChaseMillion.jpg
 
 #
 # Flags below are optional
